--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/view.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/view.html
@@ -43,7 +43,13 @@ $(document).ready(function() {
 			
 			$("a.sap-conn-resource").on("click", function() {
 				JpUiPopup.open({
-					url: url = "/platform/mgmt/conn_resource/view?scrSeq=" + JpUtilsString.trimToEmpty($(this).attr("data-key"))
+					url: "/platform/mgmt/conn_resource/view?scrSeq=" + JpUtilsString.trimToEmpty($(this).attr("data-key"))
+				});
+			});
+			
+			$("a.credentials-policy").on("click", function() {
+				JpUiPopup.open({
+					url: "/platform/mgmt/user/credentials/policy/write?cpSeq=" +  + JpUtilsString.trimToEmpty($(this).attr("data-key"))
 				});
 			});			
 		}
