--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/js.html
@@ -18,6 +18,7 @@
 <script th:src="@{/platform/js/jWebppy.utils.download.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.dateformat.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.form.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.render.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.tab.js}"></script>
