--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/js.html
@@ -18,13 +18,13 @@
 <script th:src="@{/platform/js/jWebppy.utils.download.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.dateformat.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.form.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.render.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.tab.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.table.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.modal.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.autocomplete.js}"></script>
-<script th:src="@{/platform/js/jWebppy.ui.form.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.calendar.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.tree.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.popup.js}"></script>
