--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/write.html
@@ -143,7 +143,10 @@ $(document).ready(function() {
 					}
 					else
 					{
-						opener.doSearch();
+						if (opener != null)
+						{
+							opener.doSearch();
+						};
 					};
 					
 					goBack();
