--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/js.html
@@ -13,6 +13,7 @@
 <script th:src="@{/portal/js/jWebppy.utils.number.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.security.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.form.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
 <script th:src="@{/portal/js/jWebppy.ui.popup.js}"></script>
 <script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
