--- a/jwebppy/src/main/resources/templates/platform/layout/popup/index.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/index.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<title th:text="#{PLTF_T_0006}"></title>
+<title th:text="#{PLTF_T_DOOBIZ_PLUS}"></title>
 <!-- Meta -->
 <th:block th:replace="platform/layout/popup/fragments/meta"></th:block>
 <!-- CSS -->
