--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/schedule/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/schedule/list.html
@@ -2,7 +2,7 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{portal/layout/common/index}">
+	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
 	
 <th:block layout:fragment="content">
 	<div class="block-header">
@@ -16,7 +16,7 @@
 	
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
-		<table class="condition">
+		<table class="condition table-fixed">
 			<tbody>
 				<tr>
 					<th th:text="#{HQP_L_PERIOD}"></th><!-- Period -->
