--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/part_search.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/part_search.html
@@ -2,7 +2,7 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{portal/layout/popup/index}">
+	layout:decorate="~{portal/layout/iv/hq/parts/popup/index}">
 	
 <th:block layout:fragment="content">	
 	<div class="block-header">
@@ -19,7 +19,7 @@
 				<th th:text="#{HQP_L_PART_NO}"></th><!-- Part No.  -->
 				<td>			
 					<div class="input-area">			
-						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui" th:value="${pPartNo}" style="text-transform: uppercase;">
+						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui" th:value="${pPartNo}" style="text-transform: uppercase;" autofocus />
 					</div> 										
 				</td>
 			</tr>
@@ -46,98 +46,106 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>	
 	</div>
 	
-	<script>
-	let $tableObj;
-	
-	$(function(){
-		$("#pPartNo, #pPartDesc").on("keydown", function(event) {
-			
-			$("#pPartNo").val($("#pPartNo").val().toUpperCase());
-			
-			if (event.keyCode == 13)
-			{
-				doSearch();
-			};
-		});
+<script>
+$(document).ready(function() {
+	_setPartAutocomplete($("#pPartNo"));
+});
+
+let $tableObj;	
+$(function(){
+	$("#pPartNo, #pPartDesc").on("keydown", function(event) {
 		
-		$tableObj = $("#TBL_grid").DataTable({
-			select: {
-				selector: 'td:not(.noselect)'	// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
-		    },
-			ordering: true, 
-			scrollY: 100,
-			columns: [
-				{// 컬럼에 radio 설정
-					name: "RAD_MATNR",
-					className:"center noselect skip-download",// row selection 기능 막음.
-					orderable: false,// checkbox 는 정렬 불가
-					render: function(data, type, row)
-					{
-						if (row.disabled == "disabled")
-						{
-							return "";
-						}
-	
-						return '<input type="radio" name="RAD_MATNR" id="RAD_MATNR" class="custom-ui" value="' + row.MATNR + '" onclick="clickParts(this)"><label for="RAD_MATNR"></label>';// FixedColumns 사용시엔 syncInput 호출 필요함.
-					}
-				},
-				{name: "MATNR", data: "MATNR", title: "[[#{HQP_L_PART_NO}]]"},		//Part No. 
-				{name: "MAKTX", data: "MAKTX", title: "[[#{HQP_L_DESCRIPTION}]]"}	//Description	
-			],
-			ajax: {
-				url: "/portal/iv/hq/parts/domestic/info/popup/part_search/data",
-				data: function(p)
-				{				
-					p.pPartNo = $("#pPartNo").val();
-					p.pPartDesc = $("#pPartDesc").val();
-				},
-				dataSrc: function(response) 
-				{				
-					let data = response.RESULT;
-					
-					if (data == null)
-					{
-						return [];
-					}
-					
-					let returnData = new Array();
-					
-					for (let i=0, length=data.length; i<length; i++)
-					{
-						data[i].RAD_MATNR = "";					
-					}
-					
-					$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
-					
-					return data;
-				}
-			},
-			initComplete: function() {
-				ProgressBar.hide();
-			}
-		});
-	
-		// Datatable grid 초기 설정 셋업
-		initGridTable($tableObj);
+		$("#pPartNo").val($("#pPartNo").val().toUpperCase());
 		
-		// Search 버튼 클릭
-		$("#BTN_search").on("click", function(){		
-			doSearch(); 
-		});
+		if (event.keyCode == 13)
+		{
+			doSearch();
+		};
 	});
 	
-	function clickParts(obj)
-	{
-		try
-		{
-			opener.setPartsNo(obj.value);
+	$tableObj = $("#TBL_grid").DataTable({
+		select: {
+			selector: 'td:not(.noselect)'	// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
+	    },
+		ordering: true, 
+		scrollY: 100,
+		columns: [
+			{// 컬럼에 radio 설정
+				name: "RAD_MATNR",
+				className:"center noselect skip-download",// row selection 기능 막음.
+				orderable: false,// checkbox 는 정렬 불가
+				render: function(data, type, row)
+				{
+					if (row.disabled == "disabled")
+					{
+						return "";
+					}
+
+					return '<input type="radio" name="KEY" value="' + row.MATNR + '" class="custom-ui"><label></label>';// FixedColumns 사용시엔 syncInput 호출 필요함.
+				}
+			},
+			{name: "MATNR", data: "MATNR", title: "[[#{HQP_L_PART_NO}]]"},		//Part No. 
+			{name: "MAKTX", data: "MAKTX", title: "[[#{HQP_L_DESCRIPTION}]]"}	//Description	
+		],
+		ajax: {
+			url: "/portal/iv/hq/parts/domestic/info/part_search/data",
+			data: function(p)
+			{				
+				p.pPartNo = $("#pPartNo").val();
+				p.pPartDesc = $("#pPartDesc").val();
+			},
+			dataSrc: function(response) 
+			{				
+				let data = response.RESULT;
+				
+				if (data == null)
+				{
+					return [];
+				}
+				
+				let returnData = new Array();
+				
+				for (let i=0, length=data.length; i<length; i++)
+				{
+					data[i].RAD_MATNR = "";					
+				}
+				
+				$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
+				
+				return data;
+			}
+		},
+		initComplete: function() {
+			ProgressBar.hide();
 		}
-		catch (e) {}
-	};
+	});
+
+	// Datatable grid 초기 설정 셋업
+	initGridTable($tableObj);
 	
-	function doSearch()
-	{
-		$tableObj.ajax.reload();
-	}
-	</script>	
+	$("#TBL_grid tbody").on("click", "tr", function (e) {
+	    let tblGrid = $("#TBL_grid").DataTable();	    
+	    let index = $("#TBL_grid").dataTable().api().cell($(e.target).closest("td")).index().column;	    	    
+		let rowData = tblGrid.row(this).data();
+		
+		if (index == 0)
+		{	
+			try
+			{
+				opener._callbackPartSearch(rowData.MATNR);
+			}
+			catch (e) {}
+		}					
+	});				
+});
+
+$("#BTN_search").on("click", function(){		
+	doSearch(); 
+});
+
+function doSearch()
+{
+	$tableObj.ajax.reload();
+}
+</script>
 </th:block>
