--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
@@ -5,13 +5,13 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<head>
-		<title th:text="#{PLTF_T_0006}"></title>
+		<title th:text="#{PTL_T_DOOBIZ_PLUS}"></title>
 		<!-- Meta -->
-		<th:block th:replace="portal/layout/popup/fragments/meta"></th:block>
+		<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/meta"></th:block>
 		<!-- CSS -->
-		<th:block th:replace="portal/layout/popup/fragments/css"></th:block>
+		<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/css"></th:block>
 		<!-- JavaScript -->
-		<th:block th:replace="portal/layout/popup/fragments/js"></th:block>
+		<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/js"></th:block>
 	</head>
 <body>
 <!-- Progress bar start -->
@@ -21,7 +21,7 @@ ProgressBar.show();
 <!-- Progress bar end -->
 
 <!-- Start Top -->
-<th:block th:replace="portal/layout/popup/fragments/top"></th:block>
+<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/top"></th:block>
 <!-- End Top -->
 
 <!-- Start Content -->
@@ -29,7 +29,8 @@ ProgressBar.show();
 <!-- End Content -->
 
 <!-- Start Bottom -->
-<th:block th:replace="portal/layout/popup/fragments/bottom"></th:block>
+<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/bottom"></th:block>
 <!-- End Bottom -->
+
 </body>
 </html>
